Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33301

Compiling with QT_NO_WARNING_OUTPUT fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P5: Not important
    • 4.8.6
    • 4.8.5
    • Core: Other
    • None
    • Arch Linux i686
      Qt 4.8.5
    • 53586c9d7d5b36e184dbf2d1ebf209db7c85ae8c

    Description

      g++ -c -pipe -march=i686 -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buffer-size=4 -Wall -W -D_REENTRANT -DQT_NO_WARNING_OUTPUT -DQT_NO_DEBUG -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I. -I. -o warntest.o warntest.cpp
      In file included from /usr/include/qt4/QtCore/qnamespace.h:45:0,
      from /usr/include/qt4/QtCore/qobjectdefs.h:45,
      from /usr/include/qt4/QtCore/qobject.h:47,
      from /usr/include/qt4/QtCore/qcoreapplication.h:45,
      from /usr/include/qt4/QtCore/QCoreApplication:1,
      from warntest.cpp:1:
      /usr/include/qt4/QtCore/qglobal.h:1798:26: error: new declaration ‘QNoDebug qWarning()’
      inline QNoDebug qWarning();
      ^
      /usr/include/qt4/QtCore/qglobal.h:1791:29: error: ambiguates old declaration ‘QDebug qWarning()’
      Q_CORE_EXPORT_INLINE QDebug qWarning();
      ^
      make: *** [warntest.o] Error 1

      This error doesn't occur with Qt 5.1.1.

      Attachments

        1. warntest.cpp
          0.1 kB
        2. warntest.pro
          0.1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            net147 Jonathan Liu
            net147 Jonathan Liu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes